--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 12:09:00 PM</p>
+    <p class="lastupdate">09/05/2020 12:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">97.1&#176;F</td>
+        <td class="data">97.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">97.1&#176;F</td>
+        <td class="data">97.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">97.1&#176;F</td>
+        <td class="data">97.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.9&#176;F</td>
+        <td class="data">52.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.937 inHg (-0.024)</td>
+        <td class="data">29.934 inHg (-0.027)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">2 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">42%</td>
+        <td class="data">41%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:06:26 PM">
-            97.1</span><br/>
+          <span title="12:13:16 PM">
+            97.7</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:06:26 PM" class="hival">
-            97.1</span>
+          <span title="12:13:16 PM" class="hival">
+            97.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)" class="hival">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          4
+          5
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 21 hours, 23 minutes</td>
+      <td class="data">3 days, 21 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 21 hours, 22 minutes</td>
+      <td class="data">3 days, 21 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
