--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 01:54:00 PM</p>
+    <p class="lastupdate">09/05/2020 01:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">104.5&#176;F</td>
+        <td class="data">105.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">104.5&#176;F</td>
+        <td class="data">105.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">104.5&#176;F</td>
+        <td class="data">105.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.9&#176;F</td>
+        <td class="data">51.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.897 inHg (-0.060)</td>
+        <td class="data">29.893 inHg (-0.061)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">82.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:53:54 PM">
-            104.5</span><br/>
+          <span title="01:58:40 PM">
+            105.4</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:41:52 PM (Friday)">
-            104.7</span><br/>
+          <span title="01:58:40 PM (Saturday)">
+            105.4</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 04:41:52 PM">
-            104.7</span><br/>
+          <span title="09/05/2020 01:58:40 PM">
+            105.4</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:53:54 PM" class="hival">
-            104.5</span>
+          <span title="01:58:40 PM" class="hival">
+            105.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:41:52 PM (Friday)" class="hival">
-            104.7</span>
+          <span title="01:58:40 PM (Saturday)" class="hival">
+            105.4</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 04:41:52 PM" class="hival">
-            104.7</span>
+          <span title="09/05/2020 01:58:40 PM" class="hival">
+            105.4</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:30:02 AM">
             29.969</span><br/>
-          <span title="01:51:02 PM">
-            29.896</span>
+          <span title="01:57:02 PM">
+            29.891</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          3
+          4
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:51:02 PM">
-            82.1</span><br/>
+          <span title="01:54:02 PM">
+            82.2</span><br/>
           <span title="06:33:01 AM">
             74.1</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 23 hours, 7 minutes</td>
+      <td class="data">3 days, 23 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 23 hours, 7 minutes</td>
+      <td class="data">3 days, 23 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
